--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -4,4 +4,17 @@ $blue: #6C63FF;
 $black:#000000;
 $white: #FFFFFF; 
 $coral:#F76C6A;
+$grey:#C4C4C4;
+
+//font-size 
+$_20px:1.25rem;
+$_15px:0.9375rem;
+$_12px:0.75rem;
+$_25px:1.5625rem;
+$_36px:2.25rem;
+$_40px:2.5rem;
+$_28px:1.75rem;
+
+//border
+$border:2px solid $grey;
 
