--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,8 @@
 @import "_variables.scss";
+@import "_cdn.scss";
+@import "_mixin.scss";
+@import "header.scss";
+@import "main.scss";
 
 * {
     margin: 0;
@@ -6,5 +10,16 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+}
+
+
+html {
+    font-family: 'Raleway', sans-serif;
+}
+
+.container {
+max-width: 1170px;
+margin:auto;
+padding: 0 15px;
 }
 
