--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -105,9 +105,9 @@ padding: 10px 3% 10px;;
 
 .task-form {
   width: 500px;
-  margin: 50px auto 100px auto; 
-
-  
+   margin: 50px auto 100px auto; 
+  @media (max-width:800px) {width: 400px; }
+  @media (max-width:560px) {width: 400px; }
 }
 
 .task {
@@ -125,6 +125,8 @@ padding: 10px 3% 10px;;
   bottom: 0;
   left: 0;
   transform: translateY(180);
+  @media (max-width:800px) {width: 520px; }
+  @media (max-width:560px) {width: 400px; }
  }
 
 .task.active {
@@ -143,6 +145,7 @@ padding: 10px 3% 10px;;
     background: $white;
     color: $black;
   }
+  @media (max-width:800px) {width: 300px; }
 }
 
 #author {
@@ -157,6 +160,8 @@ padding: 10px 3% 10px;;
     background: $white;
     color: $black;
   }
+  @media (max-width:800px) {width: 300px; }
+
 }
 
 #message {
@@ -176,6 +181,7 @@ padding: 10px 3% 10px;;
     background: $white;
     color: $black;    
   }
+  @media (max-width:800px) {width: 300px; }
  
 }
 
@@ -413,7 +419,24 @@ color: $coral;
   color: #FFFF00;
 }
 
-
-.input-task.error {
-box-shadow: 0 0 15px #ff0000;
+.input-task:invalid {
+  border: 2px dashed red;
 }
+
+.input-task:invalid:required {
+  background-image: linear-gradient(to right, rgb(240, 197, 205), rgb(141, 230, 227));
+}
+
+.input-task:valid {
+  border: 2px solid black;
+}
+
+.task-form span {
+bottom:12px;
+right:17px;
+font-size:16px;
+color: red;
+}
+
+
+
